tests/error/union_global_private.gw
// [contains] 'static' and 'private' can only be used at class scope.
static union { int i; };
